--- a/covid/applicant.html
+++ b/covid/applicant.html
@@ -6,44 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./img/stop_covid.png" />
     <link rel="stylesheet" href="./styles/applicant/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title>Covid-19</title>
 </head>
 
 <body>
 
     <main>
-        <div class="nav-container">
-            <nav>
+        <div id="nav-container" class="nav-container">
+            <nav id="navbar">
                 <div class="image_logo">
                     <a href="./index.html"><img id="logo" src="./img/CEI.png" alt="no logo"></a>
+                    <a href="./index.html"><img id="logo2" src="./img/stop_covid.png" alt="no logo"></a>
                 </div>
-                <ul>
+
+                <ul id="myLinks">
                     <li>
-                        <div class="dropdown">
-                            <button class="dropbtn">
-                            General information ▼
-                        </button>
-                            <div class="dropdown-content">
-                                <a href="./index.html">Project title: Stop COVID`19</a>
-                                <a href="">Applicant</a>
-                                <a href="#">Intended date and place of implementation</a>
-                            </div>
-                        </div>
+                        <a id="home" href="./index.html">Home</a>
                     </li>
                     <li>
-                        <div class="dropdown">
-                            <button class="dropbtn">
-                                Description of the activity ▼
-                        </button>
-                            <div class="dropdown-content">
-                                <a href="#">link1</a>
-                                <a href="#">link2</a>
-                                <a href="#">link3</a>
-                            </div>
-                        </div>
+                        <a href=""><b>General information</b></a>
+                    </li>
+                    <li>
+                        <a href="./description.html">Description of the activity</a>
                     </li>
                     <li><a href="#">Results</a></li>
                 </ul>
+
+                <a id="hamburger" href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
             </nav>
         </div>
         <div class="tilte_section">
@@ -154,11 +147,28 @@
                 </div>
             </div>
             <div class="center_image">
-                <img id="CEI_logo" src="./img/CEI.png" alt="">
+                <div class="block">
+                    <img id="CEI_logo" src="./img/CEI.png" alt="">
+                    <img id="stop_logo" src="./img/stop_covid.png" alt="">
+                </div>
             </div>
         </footer>
     </main>
 
 </body>
+<script>
+    function myFunction() {
+
+        var navbar = document.getElementById("navbar");
+        var x = document.getElementById("myLinks");
+        if (x.style.display === "block") {
+            x.style.display = "none";
+        } else {
+            navbar.style.display = "block";
+
+            x.style.display = "block";
+        }
+    }
+</script>
 
 </html>
