added results and bullet text, also reloaded all files

--- a/covid/applicant.html
+++ b/covid/applicant.html
@@ -31,7 +31,14 @@
                     <li>
                         <a href="./description.html">Description of the activity</a>
                     </li>
-                    <li><a href="#">Results</a></li>
+                    <li><a href="./results.html">Results</a></li>
+                    <li>
+
+                        <a href="https://forms.gle/evnzg29MNrym3oyY8" id="survey" class="survey">
+                            Complete the questionnaire
+                        </a>
+
+                    </li>
                 </ul>
 
                 <a id="hamburger" href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -47,9 +54,9 @@
             </div>
 
 
-            <a id="button1" href="#LPNU"><button class="btn"  type="button" onclick="openMenuModal();">LPNU</button></a>
-            <a id="button2" href="#LNMU"><button class="btn"  type="button" onclick="openMenuModal();">LNMU</button></a>
-            <a id="button3" href="#BSEU"><button class="btn"  type="button" onclick="openMenuModal();">BSEU</button></a>
+            <a id="button1" href="#LPNU"><button class="btn"  type="button" >LPNU</button></a>
+            <a id="button2" href="#LNMU"><button class="btn"  type="button" >LNMU</button></a>
+            <a id="button3" href="#BSEU"><button class="btn"  type="button" >BSEU</button></a>
 
         </div>
         <div class="context">
@@ -69,11 +76,11 @@
             </div>
             <div class="local_context">
                 <p class="para">
-                    &nbsp;&nbsp;&nbsp;&nbsp;Lviv Polytechnic National University (LPNU), Ukraine, http://lp.edu.ua is one of the oldest technical educational institution in Eastern Europe. LPNU is ranked among top 5 technical universities in Ukraine. LPNU consists of 21
-                    education and scientific institutes, 85 scientific and research, testing and branch laboratories. <br>&nbsp;&nbsp;&nbsp;&nbsp;The University has 102 departments, 35000 students including 11000 students of IT specialties,
-                    and over 2000 academic and pedagogical staff. LPNU has participated in several Tempus, EU FP7, H2020 projects. We are establishing the Innovation office and innovation support service within the UNI4INNO Tempus project. Over the past
-                    five years, researchers of Lviv Polytechnic University have implemented over 50 grants and projects, which were received for research work from foreign institutions and within European programs, more than 40 economic contracts on the
-                    order of foreign companies and institutions and 29 joint research projects within the framework of international agreements.
+                    &nbsp;&nbsp;&nbsp;&nbsp;Lviv Polytechnic National University (LPNU), Ukraine, <a href="http://lp.edu.ua"><u>http://lp.edu.ua</u></a> is one of the oldest technical educational institution in Eastern Europe. LPNU is ranked among top
+                    5 technical universities in Ukraine. LPNU consists of 21 education and scientific institutes, 85 scientific and research, testing and branch laboratories. <br>&nbsp;&nbsp;&nbsp;&nbsp;The University has 102 departments, 35000 students
+                    including 11000 students of IT specialties, and over 2000 academic and pedagogical staff. LPNU has participated in several Tempus, EU FP7, H2020 projects. We are establishing the Innovation office and innovation support service within
+                    the UNI4INNO Tempus project. Over the past five years, researchers of Lviv Polytechnic University have implemented over 50 grants and projects, which were received for research work from foreign institutions and within European programs,
+                    more than 40 economic contracts on the order of foreign companies and institutions and 29 joint research projects within the framework of international agreements.
                 </p>
             </div>
 
@@ -92,18 +99,18 @@
             </div>
             <div class="local_context">
                 <p class="para">
-                    &nbsp;&nbsp;&nbsp;&nbsp;Danylo Halytsky Lviv National Medical University (LNMU) - http://www.meduniv.lviv.ua/ was founded in 1661. It is a modern diversified higher medical education institution with a powerful research, material and technical facilities.
-                    The University has over 19000 students, including more than 900 foreign students. <br> &nbsp;&nbsp;&nbsp;&nbsp;LNMU holds top positions in the rankings of higher educational institutions and medical schools of Ukraine.
-                    The University won the second place among all medical schools of Ukraine and the second place among all medical universities of Ukraine, according to the international database Scopus. LNMU received the Grand Prix "Leader of International
-                    Activities" at the sixth international exhibition "Modern educational establishments". LNMU consists of 6 faculties, Medical College, 75 departments, Dental Medical Center, teaching drugstore, botanical garden, Central Research Laboratory
-                    (CRL), Laboratory of Industrial Toxicology, Immunologic laboratory, Center of Pharmaceutic Care and Innovation etc. The Committee on Ethics and Bioethics has been functioning at the University since 2001. Science schools of such areas
-                    of focus were established and are developing now in the University: Chemistry of biologically active azolidines, thiazines and related heterocyclic systems as potential drugs; Cardiovascular pathology; Physiology of adaptation processes;
-                    Immune regulation and immunotherapy of human diseases; Influence of ecological and social factors on children’s dental health; Treatment of oncology patients based on principles of individualization and personification. <br>&nbsp;&nbsp;&nbsp;&nbsp;
-                    LNMU is implementing agreements on cooperation in science, education and student exchanges with Medical University of Vienna (Austria), Wroclaw Medical University (Poland), Medical University of Warsaw ( Poland), University of Würzburg
-                    (Germany), Medical University of Lublin (Poland), Institute of Health Policy and Management of Erasmus University Rotterdam (the Netherlands), Jagiellonian University (Poland), Medical University of Sofia (Bulgaria), Poznan University
-                    of Medical Sciences (Poland), University of Silesia (Poland), Medical University of Gdansk (Poland). LNMU is a member of The Association for Regional Cooperation in the fields of Health, Science and Technology. 83 scientists of the
-                    university are active members of international professional societies. The main aim of LNMU is to develop and promote strong educational and research environment be means of international cooperation and implementation of world-recognized
-                    Standards in Biomedicine and Health care.
+                    &nbsp;&nbsp;&nbsp;&nbsp;Danylo Halytsky Lviv National Medical University (LNMU) - <a href="http://www.meduniv.lviv.ua/"><u>http://www.meduniv.lviv.ua/</u></a> was founded in 1661. It is a modern diversified higher medical education
+                    institution with a powerful research, material and technical facilities. The University has over 19000 students, including more than 900 foreign students. <br> &nbsp;&nbsp;&nbsp;&nbsp;LNMU holds top positions in the rankings of higher
+                    educational institutions and medical schools of Ukraine. The University won the second place among all medical schools of Ukraine and the second place among all medical universities of Ukraine, according to the international database
+                    Scopus. LNMU received the Grand Prix "Leader of International Activities" at the sixth international exhibition "Modern educational establishments". LNMU consists of 6 faculties, Medical College, 75 departments, Dental Medical Center,
+                    teaching drugstore, botanical garden, Central Research Laboratory (CRL), Laboratory of Industrial Toxicology, Immunologic laboratory, Center of Pharmaceutic Care and Innovation etc. The Committee on Ethics and Bioethics has been functioning
+                    at the University since 2001. Science schools of such areas of focus were established and are developing now in the University: Chemistry of biologically active azolidines, thiazines and related heterocyclic systems as potential drugs;
+                    Cardiovascular pathology; Physiology of adaptation processes; Immune regulation and immunotherapy of human diseases; Influence of ecological and social factors on children’s dental health; Treatment of oncology patients based on principles
+                    of individualization and personification. <br>&nbsp;&nbsp;&nbsp;&nbsp; LNMU is implementing agreements on cooperation in science, education and student exchanges with Medical University of Vienna (Austria), Wroclaw Medical University
+                    (Poland), Medical University of Warsaw ( Poland), University of Würzburg (Germany), Medical University of Lublin (Poland), Institute of Health Policy and Management of Erasmus University Rotterdam (the Netherlands), Jagiellonian University
+                    (Poland), Medical University of Sofia (Bulgaria), Poznan University of Medical Sciences (Poland), University of Silesia (Poland), Medical University of Gdansk (Poland). LNMU is a member of The Association for Regional Cooperation in
+                    the fields of Health, Science and Technology. 83 scientists of the university are active members of international professional societies. The main aim of LNMU is to develop and promote strong educational and research environment be
+                    means of international cooperation and implementation of world-recognized Standards in Biomedicine and Health care.
 
                 </p>
             </div>
