--- a/covid/description.html
+++ b/covid/description.html
@@ -31,7 +31,14 @@
                     <li>
                         <a href="/"><b>Description of the activity</b></a>
                     </li>
-                    <li><a href="#">Results</a></li>
+                    <li><a href="./results.html">Results</a></li>
+                    <li>
+
+                        <a href="https://forms.gle/evnzg29MNrym3oyY8" id="survey" class="survey">
+                            Complete the questionnaire
+                        </a>
+
+                    </li>
                 </ul>
 
                 <a id="hamburger" href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -122,10 +129,25 @@
                 <td>1 person</td>
             </tr>
         </table>
+        <div class="bullet_text">
+            <div class="center_bullet_title">
+                <h1 id="bullet_title">According to the results, it is planned to organize the international workshop. The scientific articles will be published on the coverage of researches carried out within the framework of this project, namely</h1><br><br>
+            </div>
+            <div class="center_bullet_content">
 
+                <ul>
+                    <li id="bullet_content">the analysis of statistical results of the methods of combating viral infections and finding new approaches to the resistance of the group of patients to the COVID 19 strain,</li><br><br>
+                    <li id="bullet_content">the development and analysis of artificial intelligence methods for recognition of fake information in social networks to prevent the negative consequences of its impact.</li>
+                </ul>
+
+            </div>
+            <div class="center_bullet_results">
+                <h1 id="bullet_results">The results of the study will be processed by modern methods. The results will be published in European scientific journals and will be implemented on at the level of the project participants.</h1>
+            </div>
+        </div>
         <footer>
             <div class="center_footer_text">
-                <h1 id="footer_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</h1>
+                <h2 id="footer_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</h2>
             </div>
             <div class="center_social">
                 <div class="social">
