--- a/covid/index.html
+++ b/covid/index.html
@@ -30,7 +30,14 @@
                     <li>
                         <a href="./description.html">Description of the activity</a>
                     </li>
-                    <li><a href="#">Results</a></li>
+                    <li><a href="./results.html">Results</a></li>
+                    <li>
+
+                        <a href="https://forms.gle/evnzg29MNrym3oyY8" id="survey" class="survey">
+                            Complete the questionnaire
+                        </a>
+
+                    </li>
                 </ul>
 
                 <a id="hamburger" href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -60,6 +67,7 @@
                 </h2>
             </div>
         </div>
+
         <div class="cards">
             <div class="card">
                 <img src="./img/covid_planet.png" alt="">
