added result_text and reloaded files

--- a/covid/results.html
+++ b/covid/results.html
@@ -46,24 +46,45 @@
             </nav>
         </div>
 
+        <div class="results_text">
+            <div class="left_wing"></div>
+            <h1 class="survey_title">The dataset for COVID19 resistance prediction is used. The list of parameters is following: </h1>
+            <ul class="survey_list">
+                <li>TID,</li>
+                <li>time stamp,</li>
+                <li>age,</li>
+                <li>gender,</li>
+                <li>region,</li>
+                <li>smoking yes/no,</li>
+                <li>IgM level,</li>
+                <li>IgG level,</li>
+                <li>blood group,</li>
+                <li>was / were vaccinated against influenza,</li>
+                <li>was / were vaccinated against tuberculosis, </li>
+                <li>was/ were ill with influenza this year,</li>
+                <li>was/ were ill wit tuberculosis this year,</li>
+                <li>was/ were ill wit COVID19 this year.</li>
+
+            </ul>
+            <div class="right_wing"></div>
+        </div>
+
         <div class="results">
             <a href="https://forms.gle/evnzg29MNrym3oyY8" id="survey_btn" class="survey_btn">
                 Complete the questionnaire
             </a>
-
-            <h1>This chapter is in processing</h1>
         </div>
 
         <footer>
             <div class="center_footer_text">
-                <h1 id="footer_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</h1>
+                <h1 id="footer_text">COVID-19 Extraordinary Call for Proposals</h1>
             </div>
             <div class="center_social">
                 <div class="social">
 
                     <img class="ico" src="./img/insta.png" alt="">
-                    <img class="ico" src="./img/telegram.png" alt="">
-                    <img class="ico" src="./img/facebook.png" alt="">
+                    <a href="https://t.me/stopcovid19pro"><img class="ico" src="./img/telegram.png" alt=""></a>
+                    <a href="https://www.facebook.com/Stop-Covid19-100246368451312/"><img class="ico" src="./img/facebook.png" alt=""></a>
 
                 </div>
             </div>
