--- a/covid/applicant.html
+++ b/covid/applicant.html
@@ -142,15 +142,14 @@
         </div>
         <footer>
             <div class="center_footer_text">
-                <h1 id="footer_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</h1>
+                <h1 id="footer_text">COVID-19 Extraordinary Call for Proposals</h1>
             </div>
             <div class="center_social">
                 <div class="social">
 
                     <img class="ico" src="./img/insta.png" alt="">
-                    <img class="ico" src="./img/telegram.png" alt="">
-                    <img class="ico" src="./img/facebook.png" alt="">
-
+                    <a href="https://t.me/stopcovid19pro"><img class="ico" src="./img/telegram.png" alt=""></a>
+                    <a href="https://www.facebook.com/Stop-Covid19-100246368451312/"><img class="ico" src="./img/facebook.png" alt=""></a>
                 </div>
             </div>
             <div class="center_image">
